# Jelly-Simulation

./: .gitignore  CMakeLists.txt  CNAME  README.md
assets/: cone.webm  cube.webm  cylinder.webm  icosahedron.webm  pentagon.webm  pyramid.webm
models/: formate_obj.py
old_src/: dice_generation.cpp  helper.cpp  main.cpp
src/: controls.cpp  dice_generation.cpp  generation.cpp  load_model.cpp  main.cpp  menu.cpp  rendering.cpp  simulation.cpp  sources.hpp
